Fix the list when click on item on a different filter than active.

--- a/CleanerSeeker/CleanerSeeker/Base.lproj/Main.storyboard
+++ b/CleanerSeeker/CleanerSeeker/Base.lproj/Main.storyboard
@@ -978,6 +978,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="segmentControl" destination="7JD-EO-Mev" id="0Py-tO-zUa"/>
                         <outlet property="tableView" destination="E5I-RJ-l77" id="iof-eD-bin"/>
                         <segue destination="W6z-us-v9D" kind="show" identifier="showDetails" id="J9z-MR-oCW"/>
                     </connections>
