--- a/CleanerSeeker/CleanerSeeker/Base.lproj/Main.storyboard
+++ b/CleanerSeeker/CleanerSeeker/Base.lproj/Main.storyboard
@@ -352,7 +352,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ExS-Ha-FeG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4884.375" y="1591.9014084507041"/>
+            <point key="canvasLocation" x="5881.875" y="1591.9014084507041"/>
         </scene>
         <!--Profile-->
         <scene sceneID="UNw-x5-cQk">
@@ -542,7 +542,7 @@
                     <connections>
                         <segue destination="8tg-g6-BnR" kind="relationship" relationship="viewControllers" id="FDP-kD-nNz"/>
                         <segue destination="zZW-Pu-TDm" kind="relationship" relationship="viewControllers" id="RII-dt-dA0"/>
-                        <segue destination="5lw-tB-L66" kind="relationship" relationship="viewControllers" id="I8s-KY-wLp"/>
+                        <segue destination="v5C-Y6-UIe" kind="relationship" relationship="viewControllers" id="I8s-KY-wLp"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gZ1-to-ddH" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -636,7 +636,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oGP-Aq-FZR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1942.5" y="822.88732394366195"/>
+            <point key="canvasLocation" x="2153" y="823"/>
         </scene>
         <!--Job Details-->
         <scene sceneID="vXa-8H-95w">
@@ -647,11 +647,11 @@
                         <viewControllerLayoutGuide type="bottom" id="oZz-y9-gLs"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="fkf-BP-zLD">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="519"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="JJ5-Ry-WDN" userLabel="Base Stack">
-                                <rect key="frame" x="16" y="104" width="288" height="412"/>
+                                <rect key="frame" x="16" y="74" width="288" height="412"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sGk-qx-zsM">
                                         <rect key="frame" x="0.0" y="0.0" width="288" height="116"/>
@@ -826,8 +826,8 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="JJ5-Ry-WDN" firstAttribute="top" secondItem="WPj-Pl-AQs" secondAttribute="bottom" constant="10" id="2G6-je-36K"/>
                             <constraint firstAttribute="trailingMargin" secondItem="JJ5-Ry-WDN" secondAttribute="trailing" id="323-pb-Mcu"/>
-                            <constraint firstItem="oZz-y9-gLs" firstAttribute="top" secondItem="JJ5-Ry-WDN" secondAttribute="bottom" constant="3" id="5y9-fU-yhQ"/>
                             <constraint firstItem="JJ5-Ry-WDN" firstAttribute="leading" secondItem="fkf-BP-zLD" secondAttribute="leadingMargin" id="M38-Qy-GLS"/>
                             <constraint firstItem="JJ5-Ry-WDN" firstAttribute="centerX" secondItem="fkf-BP-zLD" secondAttribute="centerX" id="Qfs-wG-HpV"/>
                         </constraints>
@@ -848,9 +848,9 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DFL-dx-iYZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2940" y="822.88732394366195"/>
+            <point key="canvasLocation" x="3321" y="823"/>
         </scene>
-        <!--History-->
+        <!--Jobs History-->
         <scene sceneID="T6k-xc-f0G">
             <objects>
                 <viewController id="5lw-tB-L66" customClass="AplliedJobsHistoryVC" customModule="CleanerSeeker" customModuleProvider="target" sceneMemberID="viewController">
@@ -862,13 +862,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="519"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="5Kw-7f-j13">
-                                <rect key="frame" x="16" y="64" width="288" height="455"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                            </tableView>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="jMc-ni-BMA" customClass="CSSegmentControl" customModule="CleanerSeeker" customModuleProvider="target">
-                                <rect key="frame" x="100" y="28" width="121" height="29"/>
+                                <rect key="frame" x="100" y="74" width="121" height="29"/>
                                 <segments>
                                     <segment title="Applied"/>
                                     <segment title="Done"/>
@@ -877,26 +872,34 @@
                                     <action selector="filterJobsValueChanged:" destination="5lw-tB-L66" eventType="valueChanged" id="B0E-4O-3xC"/>
                                 </connections>
                             </segmentedControl>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="m95-p9-E9W">
+                                <rect key="frame" x="16" y="110" width="288" height="409"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="5Kw-7f-j13" firstAttribute="leading" secondItem="M1s-nS-18H" secondAttribute="leadingMargin" id="K7G-7O-UHD"/>
-                            <constraint firstItem="5Kw-7f-j13" firstAttribute="top" secondItem="jMc-ni-BMA" secondAttribute="bottom" constant="8" id="Mgw-qa-VGZ"/>
-                            <constraint firstItem="jMc-ni-BMA" firstAttribute="top" secondItem="CYt-uo-GGB" secondAttribute="bottom" constant="8" id="Mio-bt-d01"/>
-                            <constraint firstItem="5Kw-7f-j13" firstAttribute="trailing" secondItem="M1s-nS-18H" secondAttribute="trailingMargin" id="a5h-AZ-ik3"/>
+                            <constraint firstItem="m95-p9-E9W" firstAttribute="top" secondItem="jMc-ni-BMA" secondAttribute="bottom" constant="8" id="3Z2-4J-Y1o"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="m95-p9-E9W" secondAttribute="trailing" id="Fx2-IE-kyu"/>
+                            <constraint firstItem="qET-DK-0h5" firstAttribute="top" secondItem="m95-p9-E9W" secondAttribute="bottom" id="GWC-fh-yPt"/>
+                            <constraint firstItem="jMc-ni-BMA" firstAttribute="top" secondItem="CYt-uo-GGB" secondAttribute="bottom" constant="10" id="Mio-bt-d01"/>
+                            <constraint firstItem="m95-p9-E9W" firstAttribute="leading" secondItem="M1s-nS-18H" secondAttribute="leadingMargin" id="RKH-QH-frc"/>
                             <constraint firstItem="jMc-ni-BMA" firstAttribute="centerX" secondItem="M1s-nS-18H" secondAttribute="centerX" id="cny-Tm-aMU"/>
-                            <constraint firstItem="5Kw-7f-j13" firstAttribute="centerX" secondItem="M1s-nS-18H" secondAttribute="centerX" id="oVG-US-8BD"/>
-                            <constraint firstItem="qET-DK-0h5" firstAttribute="top" secondItem="5Kw-7f-j13" secondAttribute="bottom" id="zH9-Ew-7Hb"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="History" image="hourglass" selectedImage="hourglass-selected" id="3PN-Nf-JUS"/>
+                    <navigationItem key="navigationItem" title="Jobs History" id="i60-Yh-Lch">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="W3d-4y-ds2"/>
+                    </navigationItem>
                     <connections>
-                        <outlet property="tableView" destination="5Kw-7f-j13" id="elP-vb-0mw"/>
+                        <outlet property="segmentControl" destination="jMc-ni-BMA" id="Mjd-mz-JMj"/>
+                        <outlet property="tableView" destination="m95-p9-E9W" id="Iyk-dC-Rb6"/>
+                        <segue destination="W6z-us-v9D" kind="show" identifier="workerShowJobDetails" id="NOF-gR-n3L"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="T62-2h-XrQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="862.5" y="1591.9014084507041"/>
+            <point key="canvasLocation" x="2153" y="1592"/>
         </scene>
         <!--Job Poster Home-->
         <scene sceneID="uTI-Ly-Wsc">
@@ -914,7 +917,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ciQ-8O-cDX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1943" y="1592"/>
+            <point key="canvasLocation" x="3321" y="1592"/>
         </scene>
         <!--Jobs History-->
         <scene sceneID="fLQ-TE-JZg">
@@ -940,7 +943,7 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="E5I-RJ-l77">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="E5I-RJ-l77">
                                 <rect key="frame" x="16" y="105" width="288" height="414"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -982,12 +985,12 @@
                     <connections>
                         <outlet property="segmentControl" destination="7JD-EO-Mev" id="0Py-tO-zUa"/>
                         <outlet property="tableView" destination="E5I-RJ-l77" id="iof-eD-bin"/>
-                        <segue destination="W6z-us-v9D" kind="show" identifier="showDetails" id="J9z-MR-oCW"/>
+                        <segue destination="W6z-us-v9D" kind="show" identifier="posterShowJobDetails" id="J9z-MR-oCW"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SGd-LW-7yW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3946.875" y="1591.9014084507041"/>
+            <point key="canvasLocation" x="4944.375" y="1591.9014084507041"/>
         </scene>
         <!--Sign Up-->
         <scene sceneID="XVS-8s-14n">
@@ -1165,7 +1168,26 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="llC-TQ-FBW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2949.375" y="1591.9014084507041"/>
+            <point key="canvasLocation" x="4123" y="1580"/>
+        </scene>
+        <!--History-->
+        <scene sceneID="UMe-At-TME">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="v5C-Y6-UIe" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="History" image="hourglass" selectedImage="hourglass-selected" id="3PN-Nf-JUS"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="JFV-LV-6zt">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="5lw-tB-L66" kind="relationship" relationship="rootViewController" id="tu7-af-A20"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0fi-wT-oJ7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="862.5" y="1591.9014084507041"/>
         </scene>
     </scenes>
     <resources>
@@ -1177,7 +1199,7 @@
         <image name="profile-male-selected" width="28" height="25"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="J9z-MR-oCW"/>
-        <segue reference="RII-dt-dA0"/>
+        <segue reference="r4a-jc-dzk"/>
+        <segue reference="NOF-gR-n3L"/>
     </inferredMetricsTieBreakers>
 </document>
