--- a/CleanerSeeker/CleanerSeeker/Base.lproj/Main.storyboard
+++ b/CleanerSeeker/CleanerSeeker/Base.lproj/Main.storyboard
@@ -352,7 +352,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ExS-Ha-FeG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5881.875" y="1591.9014084507041"/>
+            <point key="canvasLocation" x="5856" y="1578"/>
         </scene>
         <!--Profile-->
         <scene sceneID="UNw-x5-cQk">
@@ -647,7 +647,7 @@
                         <viewControllerLayoutGuide type="bottom" id="oZz-y9-gLs"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="fkf-BP-zLD">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="519"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="JJ5-Ry-WDN" userLabel="Base Stack">
@@ -990,7 +990,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SGd-LW-7yW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4944.375" y="1591.9014084507041"/>
+            <point key="canvasLocation" x="4976" y="1579"/>
         </scene>
         <!--Sign Up-->
         <scene sceneID="XVS-8s-14n">
@@ -1192,6 +1192,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="r4a-jc-dzk"/>
-        <segue reference="NOF-gR-n3L"/>
+        <segue reference="J9z-MR-oCW"/>
     </inferredMetricsTieBreakers>
 </document>
